--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <title>Jason K Gibson - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css" />
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header>
