--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     />
     <title>Jason K Gibson - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
+    <meta
+      property="og:title"
+      content="Jason K Gibson - WDD 230 - Web Frontend Development"
+    />
+    <meta property="og:type" content="website"> 
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREKv5FXsGjYW_FjgUGHNAWEEBhcyYl-0UEyg&s" />
+    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230">
   </head>
   <body>
     <header>
