--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
       content="This page highlights the development work for Jason K Gibson in a college course titled WDD 230 - WebFrontend Development. It will serve as a course assignment portal"
     />
     <title>Jason K Gibson - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="icon" href="favicon.ico" />
     <meta
       property="og:title"
       content="Jason K Gibson - WDD 230 - Web Frontend Development"
     />
-    <meta property="og:type" content="website"> 
-    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREKv5FXsGjYW_FjgUGHNAWEEBhcyYl-0UEyg&s" />
-    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230">
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREKv5FXsGjYW_FjgUGHNAWEEBhcyYl-0UEyg&s"
+    />
+    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230" />
   </head>
   <body>
     <header>
