--- a/index.html
+++ b/index.html
@@ -1,71 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="author" content="Jason K Gibson" />
-    <meta
-      name="description"
-      content="This page highlights the development work for Jason K Gibson in a college course titled WDD 230 - WebFrontend Development. It will serve as a course assignment portal"
-    />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Jason K Gibson">
+    <meta name="description" content="This page highlights the development work for Jason K Gibson in a college course titled WDD 230 - WebFrontend Development. It will serve as a course assignment portal">
     <title>Jason K Gibson - WDD 230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="icon" href="favicon.ico" />
-    <meta
-      property="og:title"
-      content="Jason K Gibson - WDD 230 - Web Frontend Development"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREKv5FXsGjYW_FjgUGHNAWEEBhcyYl-0UEyg&s"
-    />
-    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="Jason K Gibson - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREKv5FXsGjYW_FjgUGHNAWEEBhcyYl-0UEyg&s">
+    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230">
+</head>
+
+<body>
     <header>
-      <h1>Jason K Gibson</h1>
-      <img src="images/self-portrait.png" alt="" />
-      <nav>
-        <a href="#">Home</a>
-        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="BYUI.edu" target="_blank" rel="noreferrer noopener"
-          >BYU-Idaho</a
-        >
-        <a
-          href="https://www.churchofjesuschrist.org/study/scriptures/nt/2-tim/1?lang=eng&id=p7#p7"
-          target="_blank"
-          rel="noreferrer noopener"
-          >Scripture</a
-        >
-      </nav>
+        <h1>Jason K Gibson</h1>
+        <img src="images/self-portrait.png" alt="">
+        <nav>
+            <a href="#">Home</a>
+            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+            <a href="chamber/">Chamber</a>
+            <a href="BYUI.edu" target="_blank" rel="noreferrer noopener">BYU-Idaho</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/nt/2-tim/1?lang=eng&id=p7#p7" target="_blank" rel="noreferrer noopener">Scripture</a>
+        </nav>
     </header>
     <main>
-      <h2>WDD 230: Web Frontend Development</h2>
-      <section class="card">
-        <h3>Learning Activities</h3>
-        <ul>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-        </ul>
-      </section>
-      <section class="card">
-        <h3>Information</h3>
-        <p>Weather Placeholder</p>
-        <p>page visits Placeholder</p>
-      </section>
+        <h2>WDD 230: Web Frontend Development</h2>
+        <section class="card left-col">
+            <h3>Learning Activities</h3>
+            <ul>
+                <li>
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href=""></a>
+                </li>
+            </ul>
+        </section>
+        <section class="card right-col">
+            <h3>Information</h3>
+            <p>Weather Placeholder</p>
+            <p>page visits Placeholder</p>
+        </section>
     </main>
     <footer>
-      <p id="copyright"></p>
-      <p id="lastModified"></p>
+        <p id="copyright"></p>
+        <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
-  </body>
+</body>
+
 </html>
