finishing design principles page

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -8,6 +8,7 @@
     <title>Design Principles | WDD230 | Jason K Gibson</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/sizes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
         <h1>Design Principles</h1>
     </header>
     <main>
-        <section>
+        <section class="left-col">
             <h2>Visual Hierarchy</h2>
             <ul>
                 <li>Williams Sonoma</li>
@@ -27,7 +28,7 @@
             <img src="images/visual-hierarchy.png" alt="an example of visual hierarchy">
             <p>Williams Sonoma does a good job with visual hierarchy. It seems that their most important thing is to show beauty. I think that's why they focus so much on beautiful images. They typography helps to guide the eye to important things also.</p>
         </section>
-        <section>
+        <section class="middle-col">
             <h2>Rule of Thirds</h2>
             <ul>
                 <li>Staak Studio</li>
@@ -36,7 +37,7 @@
             <img src="images/rule-of-thirds.png" alt="an example of the rule of Thirds">
             <p>Staak Studio has a main header with images from past work. if you mentally break the image into thirds horizontally and vertically, you can see that their words fall on the line of thirds, the images land within the thirds, etc.</p>
         </section>
-        <section>
+        <section class="right-col">
             <h2>Contrast</h2>
             <ul>
                 <li>Remix</li>
