adding design principles to homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li>
-                    <a href=""></a>
+                    <a href="https://gibsonjk1.github.io/wdd230/lesson02/design-principles.html">design-principles</a>
                 </li>
                 <li>
                     <a href=""></a>
