--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Design Principles | WDD230 | Jason K Gibson</title>
+    <meta name="description" content="A beautiful website displaying 3 good practices for website design">
+    <meta name="author" content="Jason K Gibson">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/sizes.css">
