--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="https://gibsonjk1.github.io/wdd230/lesson02/design-principles.html">design-principles</a>
                 </li>
                 <li>
-                    <a href=""></a>
+                    <a href="images/combinators.png">Combinators Exercise</a>
                 </li>
             </ul>
         </section>
