--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <li>
                     <a href="images/combinators.png">Combinators Exercise</a>
                 </li>
+                <li>
+                    <a href="https://codepen.io/Jason-Gibson-the-solid/pen/OJKNPjq">Pseudo Elements Codepen</a>
+                </li>
             </ul>
         </section>
         <section class="card right-col">
