--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <li>
                     <a href="https://codepen.io/Jason-Gibson-the-solid/pen/OJKNPjq">Pseudo Elements Codepen</a>
                 </li>
+                <li>
+                    <a href="https://codepen.io/Jason-Gibson-the-solid/pen/KKOzwZd">Hamburger Menu Codepen</a>
+                </li>
             </ul>
         </section>
         <section class="card right-col">
