--- a/index.html
+++ b/index.html
@@ -31,37 +31,47 @@
         <div>
             <button type="button" id="hamburger"></button>
         </div>
-        <nav class="nav">
-            <a href="#" class="active">Home</a>
-            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-            <a href="chamber/">Chamber</a>
-            <a href="BYUI.edu" target="_blank" rel="noreferrer noopener">BYU-Idaho</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures/nt/2-tim/1?lang=eng&id=p7#p7" target="_blank" rel="noreferrer noopener">Scripture</a>
+        <nav>
+            <ul class="nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+                <li><a href="chamber/">Chamber</a></li>
+                <li><a href="BYUI.edu" target="_blank" rel="noreferrer noopener">BYU-Idaho</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/2-tim/1?lang=eng&id=p7#p7" target="_blank" rel="noreferrer noopener">Scripture</a></li>
+            </ul>
+
+
+
+
         </nav>
     </header>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card left-col">
             <h3>Learning Activities</h3>
-            <ul>
-                <li>
-                    <a href="https://gibsonjk1.github.io/wdd230/lesson02/design-principles.html">design-principles</a>
-                </li>
-                <li>
-                    <a href="images/combinators.png">Combinators Exercise</a>
-                </li>
-                <li>
-                    <a href="https://codepen.io/Jason-Gibson-the-solid/pen/OJKNPjq">Pseudo Elements Codepen</a>
-                </li>
-                <li>
-                    <a href="https://codepen.io/Jason-Gibson-the-solid/pen/KKOzwZd">Hamburger Menu Codepen</a>
-                </li>
-            </ul>
+            <div>
+                <ul>
+                    <li>
+                        <a href="https://gibsonjk1.github.io/wdd230/lesson02/design-principles.html">design-principles</a>
+                    </li>
+                    <li>
+                        <a href="images/combinators.png">Combinators Exercise</a>
+                    </li>
+                    <li>
+                        <a href="https://codepen.io/Jason-Gibson-the-solid/pen/OJKNPjq">Pseudo Elements Codepen</a>
+                    </li>
+                    <li>
+                        <a href="https://codepen.io/Jason-Gibson-the-solid/pen/KKOzwZd">Hamburger Menu Codepen</a>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="card right-col">
             <h3>Information</h3>
-            <p>Weather Placeholder</p>
-            <p>page visits Placeholder</p>
+            <div>
+                <p>Weather Placeholder</p>
+                <p>page visits Placeholder</p>
+            </div>
         </section>
     </main>
     <div class="map">
