--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <li>
                         <a href="https://gibsonjk1.github.io/wdd230/lesson03/chamber-site-plan.html">Chamber Site Plan</a>
                     </li>
+                    <li>
+                        <a href="https://codepen.io/Jason-Gibson-the-solid/pen/JjgRRWX">Pseudo Class Code Pen</a>
+                    </li>
                 </ul>
             </div>
         </section>
