setting up chamber

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,28 @@
 </head>
 
 <body>
-
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <img src="hero.webp" alt="Shelley Chamber of Commerce">
+        <button style="button">Join the Chamber</button>
+        <section class="events">
+            <h2>Events</h2>
+        </section>
+        <section class="weather-card">
+            <h2>Weather</h2>
+        </section>
+        <section class="spotlight">
+            <h2>Spotlights</h2>
+            <div class="spotlight-card"></div>
+            <div class="spotlight-card"></div>
+            <div class="spotlight-card"></div>
+        </section>
+    </main>
+    <footer>
+        <p>©️ Jason K Gibson 2024</p>
+    </footer>
 </body>
 
 </html>
