--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shelley Idaho Chamber of Commerce</title>
+    <link rel="icon" href="favicon.ico">
     <meta name="author" content="Jason K Gibson">
     <meta name="description" content="The home page of the Chamber of Commerce for Shelley Idaho. including Events, Calendar, and directory of members">
     <meta property="og:title" content="Jason K Gibson - WDD 230 - Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fchamber-of-commerce&psig=AOvVaw167CoqI2er2uHEsl1U0eso&ust=1728602339165000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLCSs9i3gokDFQAAAAAdAAAAABAE">
     <meta property="og:url" content="https://gibsonjk1.github.io/wdd230/chamber">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
@@ -19,6 +24,7 @@
         <nav></nav>
     </header>
     <main>
+        <h1></h1>
         <img src="hero.webp" alt="Shelley Chamber of Commerce">
         <button style="button">Join the Chamber</button>
         <section class="events">
