--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,14 +35,27 @@
         </section>
         <section class="spotlight">
             <h2>Spotlights</h2>
-            <div class="spotlight-card"></div>
-            <div class="spotlight-card"></div>
-            <div class="spotlight-card"></div>
+            <div class="spotlight-card">
+                <h3>Weather</h3>
+                <p>71 degrees - Partly Cloudy</p>
+            </div>
+            <div class="spotlight-card">
+                <h3>Member Information</h3>
+                <p>We have members</p>
+                <button>Join</button>
+            </div>
+            <div class="spotlight-card">
+                <h3>More Info</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis maxime quidem architecto repellat nihil ducimus impedit beatae dolore, doloremque ipsam animi iusto placeat officia, magnam sapiente rem itaque!</p>
+            </div>
         </section>
     </main>
     <footer>
         <p>©️ Jason K Gibson 2024</p>
+        <p>A project of WDD230</p>
+        <div id="modified-date"></div>
     </footer>
+    <script src="scripts/get-dates.js"></script>
 </body>
 
 </html>
