--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -13,6 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fchamber-of-commerce&psig=AOvVaw167CoqI2er2uHEsl1U0eso&ust=1728602339165000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLCSs9i3gokDFQAAAAAdAAAAABAE">
     <meta property="og:url" content="https://gibsonjk1.github.io/wdd230/chamber">
+    <meta property="og:description" content="Welcome to the Chamber of Commerce for Shelley Idaho">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -25,7 +26,7 @@
     </header>
     <main>
         <h1></h1>
-        <img src="hero.webp" alt="Shelley Chamber of Commerce">
+        <img src="images/Taylor-Mountain-OG.jpg" alt="Shelley Chamber of Commerce">
         <button style="button">Join the Chamber</button>
         <section class="events">
             <h2>Events</h2>
@@ -53,7 +54,7 @@
     <footer>
         <p>©️ Jason K Gibson 2024</p>
         <p>A project of WDD230</p>
-        <div id="modified-date"></div>
+        <p id="modified-date"></p>
     </footer>
     <script src="scripts/get-dates.js"></script>
 </body>
