--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,11 +22,20 @@
 
 <body>
     <header>
-        <nav></nav>
+        <div class="header-iden">
+            <img src="" alt="Shelley Chamber of Commerce">
+            <h1>Shelley Chamber of Commerce</h1>
+        </div>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Discover</a>
+            <a href="">Directory</a>
+            <a href="">Join</a>
+        </nav>
     </header>
     <main>
-        <h1></h1>
-        <img src="images/Taylor-Mountain-OG.jpg" alt="Shelley Chamber of Commerce">
+
+
         <button style="button">Join the Chamber</button>
         <section class="events">
             <h2>Events</h2>
