--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="favicon.ico">
     <meta name="author" content="Jason K Gibson">
     <meta name="description" content="The home page of the Chamber of Commerce for Shelley Idaho. including Events, Calendar, and directory of members">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
     <meta property="og:title" content="Jason K Gibson - WDD 230 - Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fchamber-of-commerce&psig=AOvVaw167CoqI2er2uHEsl1U0eso&ust=1728602339165000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLCSs9i3gokDFQAAAAAdAAAAABAE">
@@ -23,47 +26,55 @@
 <body>
     <header>
         <div class="header-iden">
-            <img src="" alt="Shelley Chamber of Commerce">
-            <h1>Shelley Chamber of Commerce</h1>
+            <div class="header-img">
+                <img src="images/chamber-of-commerce.jpg" alt="Shelley Chamber of Commerce">
+            </div>
+            <div class="header-title">
+                <h1>Shelley Chamber of Commerce</h1>
+            </div>
         </div>
         <nav>
-            <a href="">Home</a>
-            <a href="">Discover</a>
-            <a href="">Directory</a>
-            <a href="">Join</a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Discover</a></li>
+                <li><a href="">Directory</a></li>
+                <li><a href="">Join</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-
-
-        <button style="button">Join the Chamber</button>
-        <section class="events">
-            <h2>Events</h2>
-        </section>
-        <section class="weather-card">
-            <h2>Weather</h2>
-        </section>
-        <section class="spotlight">
-            <h2>Spotlights</h2>
-            <div class="spotlight-card">
-                <h3>Weather</h3>
-                <p>71 degrees - Partly Cloudy</p>
-            </div>
-            <div class="spotlight-card">
-                <h3>Member Information</h3>
-                <p>We have members</p>
-                <button>Join</button>
-            </div>
-            <div class="spotlight-card">
-                <h3>More Info</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis maxime quidem architecto repellat nihil ducimus impedit beatae dolore, doloremque ipsam animi iusto placeat officia, magnam sapiente rem itaque!</p>
-            </div>
-        </section>
+        <div class="button">
+            <button style="button">Join the Chamber</button>
+        </div>
+        <div class="cards">
+            <section class="events card-2">
+                <h2>Events</h2>
+            </section>
+            <section class="weather card-2">
+                <h2>Weather</h2>
+            </section>
+            <section class="spotlight card-1">
+                <h2>Spotlights</h2>
+                <div class="spotlight-card">
+                    <h3>Weather</h3>
+                    <p>71 degrees - Partly Cloudy</p>
+                </div>
+                <div class="spotlight-card">
+                    <h3>Member Information</h3>
+                    <p>We have members</p>
+                    <button>Join</button>
+                </div>
+                <div class="spotlight-card">
+                    <h3>More Info</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis maxime quidem architecto repellat nihil ducimus impedit beatae dolore, doloremque ipsam animi iusto placeat officia, magnam sapiente rem itaque!</p>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <p>©️ Jason K Gibson 2024</p>
         <p>A project of WDD230</p>
-        <p id="modified-date"></p>
+        <p id="modifiedDate"></p>
     </footer>
     <script src="scripts/get-dates.js"></script>
 </body>
