--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
     </header>
     <main>
         <div class="button">
-            <button style="button">Join the Chamber</button>
+            <button>Join the Chamber</button>
         </div>
         <div class="cards">
             <section class="events card-2">
