--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,8 @@
                 <h1>Shelley Chamber of Commerce</h1>
             </div>
         </div>
-        <nav>
+        <button id="hamburger"></button>
+        <nav class="nav">
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Discover</a></li>
@@ -75,8 +76,10 @@
         <p>©️ Jason K Gibson 2024</p>
         <p>A project of WDD230</p>
         <p id="modifiedDate"></p>
+        <p>Contact: 123 Main St. Shelley Idaho | 208.123.4567</p>
     </footer>
     <script src="scripts/get-dates.js"></script>
+    <script src="scripts/hamburger.js"></script>
 </body>
 
 </html>
