Chamber fixes and BOM DOM manipulation

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,15 +27,16 @@
     <header>
         <div class="header-iden">
             <div class="header-img">
-                <img src="images/chamber-of-commerce.jpg" alt="Shelley Chamber of Commerce">
+                <img src="images/les-world.png" alt="Shelley Chamber of Commerce">
             </div>
             <div class="header-title">
-                <h1>Shelley Chamber of Commerce</h1>
+                <h1>Shelley Idaho</h1>
+                <h2>Chamber of Commerce</h2>
             </div>
         </div>
         <button id="hamburger"></button>
-        <nav class="nav">
-            <ul>
+        <nav>
+            <ul id="nav" class="closed">
                 <li><a href="">Home</a></li>
                 <li><a href="">Discover</a></li>
                 <li><a href="">Directory</a></li>
@@ -45,6 +46,7 @@
     </header>
     <main>
         <div class="button">
+            <img src="images/the-falls-photo.jpg" alt="Falls on Snake River in Shelley Idaho">
             <button>Join the Chamber</button>
         </div>
         <div class="cards">
@@ -71,6 +73,7 @@
                 </div>
             </section>
         </div>
+        <div class="media"></div>
     </main>
     <footer>
         <p>©️ Jason K Gibson 2024</p>
