--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -8,6 +8,7 @@
     <title>BOM DOM Manipulation</title>
     <meta name="author" content="Jason K Gibson">
     <meta name="description" content="an assignment of WDD230 consisting of DOM manipulation via js">
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 
 <body>
@@ -23,6 +24,7 @@
         </main>
     </body>
     <footer>©️ Jason K Gibson 2024</footer>
+    <script src="scripts/bom.js"></script>
 </body>
 
 </html>
