adding BOM to Portal

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li>
                         <a href="https://codepen.io/Jason-Gibson-the-solid/pen/JjgRRWX">Pseudo Class Code Pen</a>
                     </li>
+                    <li>
+                        <a href="https://gibsonjk1.github.io/wdd230/lesson05/bom.html">BOM Fav Chapter Tool</a>
+                    </li>
                 </ul>
             </div>
         </section>
