--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,6 +45,10 @@
         </nav>
     </header>
     <main>
+        <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
         <div class="button">
             <img src="images/the-falls-photo.jpg" alt="Falls on Snake River in Shelley Idaho">
             <button>Join the Chamber</button>
@@ -52,24 +56,31 @@
         <div class="cards">
             <section class="events card-2">
                 <h2>Events</h2>
+                <hr>
             </section>
             <section class="weather card-2">
                 <h2>Weather</h2>
+                <hr>
+                <p>72 fahrenheit</p>
+                <p>Humidity: 20%</p>
+                <p>Wind Chill: N/A</p>
             </section>
             <section class="spotlight card-1">
                 <h2>Spotlights</h2>
-                <div class="spotlight-card">
-                    <h3>Weather</h3>
-                    <p>71 degrees - Partly Cloudy</p>
-                </div>
-                <div class="spotlight-card">
-                    <h3>Member Information</h3>
-                    <p>We have members</p>
-                    <button>Join</button>
-                </div>
-                <div class="spotlight-card">
-                    <h3>More Info</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis maxime quidem architecto repellat nihil ducimus impedit beatae dolore, doloremque ipsam animi iusto placeat officia, magnam sapiente rem itaque!</p>
+                <div class="flexbox">
+                    <div class="spotlight-card">
+                        <h3>Weather</h3>
+                        <p>71 degrees - Partly Cloudy</p>
+                    </div>
+                    <div class="spotlight-card">
+                        <h3>Member Information</h3>
+                        <p>We have members</p>
+                        <button>Join</button>
+                    </div>
+                    <div class="spotlight-card">
+                        <h3>More Info</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis maxime quidem architecto repellat nihil ducimus impedit beatae dolore, doloremque ipsam animi iusto placeat officia, magnam sapiente rem itaque!</p>
+                    </div>
                 </div>
             </section>
         </div>
