--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
     <header>
         <div class="header-iden">
             <div class="header-img">
-                <img src="images/les-world.png" alt="Shelley Chamber of Commerce">
+                <img src="images/world.png" alt="Shelley Chamber of Commerce">
             </div>
             <div class="header-title">
                 <h1>Shelley Idaho</h1>
@@ -79,12 +79,11 @@
                     </div>
                     <div class="spotlight-card">
                         <h3>More Info</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis maxime quidem architecto repellat nihil ducimus impedit beatae dolore, doloremque ipsam animi iusto placeat officia, magnam sapiente rem itaque!</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis</p>
                     </div>
                 </div>
             </section>
         </div>
-        <div class="media"></div>
     </main>
     <footer>
         <p>©️ Jason K Gibson 2024</p>
@@ -94,6 +93,7 @@
     </footer>
     <script src="scripts/get-dates.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/dark-mode.js"></script>
 </body>
 
 </html>
