--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,8 +30,7 @@
                 <img src="images/world.png" alt="Shelley Chamber of Commerce">
             </div>
             <div class="header-title">
-                <h1>Shelley Idaho</h1>
-                <h2>Chamber of Commerce</h2>
+                <h1>Shelley Idaho Chamber of Commerce</h1>
             </div>
         </div>
         <button id="hamburger"></button>
