--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     <li>
                         <a href="https://gibsonjk1.github.io/wdd230/lesson05/bom.html">BOM Fav Chapter Tool</a>
                     </li>
+                    <li>
+                        <a href="lesson06/images/landscape.webp">8kb Landscape Image Webp</a>
+                    </li>
                 </ul>
             </div>
         </section>
