--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                     <li>
                         <a href="lesson06/images/landscape.webp">8kb Landscape Image Webp</a>
                     </li>
+                    <li>
+                        <a href="lesson06/responsive-images.html">Responsive Images</a>
+                    </li>
                 </ul>
             </div>
         </section>
