Temple Hero Image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         </nav>
     </header>
     <main>
+        <div class="temple-hero">
+            <picture>
+                <source media="(min-width: 400px)" srcset="images/chicago-temple-small.webp">
+                <img src="images/chicago-temple-medium.webp" alt="temple picture" width="960" height="633">
+            </picture>
+            <div>
+                <h2>Chicago Temple</h2>
+            </div>
+        </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card left-col">
             <h3>Learning Activities</h3>
@@ -91,7 +100,7 @@
     </main>
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11600.93057756404!2d-112.12794741175556!3d43.37215936914908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5354f90a7195d4c1%3A0xfa09d0ab04a6276b!2sShelley%20Cemetery!5e0!3m2!1sen!2sus!4v1727997436910!5m2!1sen!2sus"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         <p id="copyright"></p>
