--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,12 @@
                     <span class="slider round"></span>
                   </label>
         <div class="button">
-            <img src="images/the-falls-photo.jpg" alt="Falls on Snake River in Shelley Idaho">
+            <picture>
+                <source media="(min-width: 500px)" srcset="images/large-image.jpg">
+                <source media="(min-width: 1000px)" srcset="images/large-image.jpg">
+                <img src="images/large-image.jpg" alt="temple picture" width="1500" height="750">
+            </picture>
+            <img src="images/large-image.jpg" alt="Falls on Snake River in Shelley Idaho">
             <button>Join the Chamber</button>
         </div>
         <div class="cards">
