--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="images/chicago-temple-medium.webp" alt="temple picture" width="960" height="633">
             </picture>
             <div>
-                <h2>Chicago Temple</h2>
+                <p>Chicago Temple</p>
             </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
