--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                     <li>
                         <a href="lesson06/responsive-images.html">Responsive Images</a>
                     </li>
+                    <li>
+                        <a href="lesson07/lazyload.html">Lazy Loading Images</a>
+                    </li>
                 </ul>
             </div>
         </section>
