portal update lesson 07

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                     <li>
                         <a href="lesson07/lazyload.html">Lazy Loading Images</a>
                     </li>
+                    <li>
+                        <a href="lesson07/bom.html">BOM local storage</a>
+                    </li>
                 </ul>
             </div>
         </section>
