--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shelley Idaho Chamber of Commerce</title>
+    <title>Discover Shelley Idaho | Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico">
     <meta name="author" content="Jason K Gibson">
     <meta name="description" content="The home page of the Chamber of Commerce for Shelley Idaho. including Events, Calendar, and directory of members">
