--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -36,8 +36,8 @@
         <button id="hamburger"></button>
         <nav>
             <ul id="nav" class="closed">
-                <li><a href="">Home</a></li>
-                <li><a href="">Discover</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="">Directory</a></li>
                 <li><a href="">Join</a></li>
             </ul>
