--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h3>Information</h3>
             <div>
                 <p>Weather Placeholder</p>
-                <p>page visits Placeholder</p>
+                <p class="page-visits">1</p>
             </div>
         </section>
     </main>
@@ -114,6 +114,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/page-visit.js"></script>
 </body>
 
 </html>
