--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div>
-            <button type="button" id="hamburger"></button>
+            <button type="button" id="hamburger">.</button>
         </div>
         <nav>
             <ul class="nav">
@@ -52,7 +52,7 @@
                 <img src="images/chicago-temple-medium.webp" alt="temple picture" width="960" height="633">
             </picture>
             <div>
-                <p>Chicago Temple</p>
+                <h2>Chicago Temple</h2>
             </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
