--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div>
-            <button type="button" id="hamburger">.</button>
+            <button type="button" id="hamburger">Menu</button>
         </div>
         <nav>
             <ul class="nav">
