--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                     <li>
                         <a href="lesson07/bom.html">BOM local storage</a>
                     </li>
+                    <li>
+                        <a href="lesson08/tablebuild.html">Table Example</a>
+                    </li>
                 </ul>
             </div>
         </section>
