--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     <li>
                         <a href="lesson08/tablebuild.html">Table Example</a>
                     </li>
+                    <li>
+                        <a href="lesson08/Form-start/index.html">Form-Start Assignment</a>
+                    </li>
                 </ul>
             </div>
         </section>
