--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <li>
                         <a href="lesson08/Form-start/index.html">Form-Start Assignment</a>
                     </li>
+                    <li>
+                        <a href="form.html">Group Form Project</a>
+                    </li>
                 </ul>
             </div>
         </section>
