--- a/record.html
+++ b/record.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Congratulations!</title>
+    <meta name="description" content="A congratulations form for completing a form">
+    <link rel="stylesheet" href="styles/congrats.css">
 </head>
 
 <body>
-    <h1>Congratulations</h1>
-    <h2>Your Account Has Been Created!</h2>
+    <div class="congrats">
+        <h1>Congratulations!</h1>
+        <h2>Your Account Has Been Created!</h2>
+    </div>
 </body>
 
 </html>
