fixing portal link

--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
         </div>
         <nav>
             <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
                 <li><a href="chamber/">Chamber</a></li>
                 <li><a href="BYUI.edu" target="_blank" rel="noreferrer noopener">BYU-Idaho</a></li>
