--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shelley Idaho Chamber of Commerce</title>
+    <title>Join the Shelley Idaho Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico">
     <meta name="author" content="Jason K Gibson">
-    <meta name="description" content="The home page of the Chamber of Commerce for Shelley Idaho. including Events, Calendar, and directory of members">
+    <meta name="description" content="The application form to Join the Shelley Chamber of Commerce. Includes a comparison of membership levels.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
@@ -55,10 +55,7 @@
                         <label>Email* <input type="email" name="email" id="email" required placeholder="someone@something.com"></label>
                         <label>Mobile Phone* <input type="tel" name="mphone" id="mphone"required placeholder="xxx-xxx-xxxx"></label>
                         <label>Business/Organization Name* <input type="text" name="org" id="org" required></label>
-                        <div class="member-level">
-                            <p>Choose Your Membership Level</p>
-                        </div>
-                        <input type="range" name="memlev" id="memlev" min="1" max="4" step="1" value="1">
+                        <label class="center-blk">Choose Your Membership Level<input type="range" name="memlev" id="memlev" min="1" max="4" step="1" value="1"></label>
                         <div class="member-level-display">
                             <p>NP Membership</p>
                         </div>
