JSON Learning Activity

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                     <li>
                         <a href="form.html">Group Form Project</a>
                     </li>
+                    <li>
+                        <a href="lesson09/new-ward-members.json">JSON Practice</a>
+                    </li>
                 </ul>
             </div>
         </section>
