--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                     <li>
                         <a href="lesson09/new-ward-members.json">JSON Practice</a>
                     </li>
+                    <li>
+                        <a href="lesson09/prophets.html">Prophets Grid</a>
+                    </li>
                 </ul>
             </div>
         </section>
