--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -48,54 +48,7 @@
                     <input type="checkbox">
                     <span class="slider round"></span>
                   </label>
-        <div class="button">
-            <picture>
-                <source media="(min-width: 500px)" srcset="images/hero-small.webp">
-                <source media="(min-width: 1000px)" srcset="images/hero-medium.webp">
-                <img src="images/hero-large.webp" alt="temple picture" width="1500" height="750">
-            </picture>
-            <button>Join the Chamber</button>
-            <div class="small-img">
-                <p>500px</p>
-            </div>
-            <div class="medium-img">
-                <p>1000px</p>
-            </div>
-            <div class="large-img">
-                <p>1500px</p>
-            </div>
-        </div>
-        <div class="cards">
-            <section class="events card-2">
-                <h2>Events</h2>
-                <hr>
-            </section>
-            <section class="weather card-2">
-                <h2>Weather</h2>
-                <hr>
-                <p id="temp">72</p>
-                <p id="windspeed">Windspeed: 12</p>
-                <p id="windchill">Wind Chill: N/A</p>
-            </section>
-            <section class="spotlight card-1">
-                <h2>Spotlights</h2>
-                <div class="flexbox">
-                    <div class="spotlight-card">
-                        <h3>Weather</h3>
-                        <p>71 degrees - Partly Cloudy</p>
-                    </div>
-                    <div class="spotlight-card">
-                        <h3>Member Information</h3>
-                        <p>We have members</p>
-                        <button>Join</button>
-                    </div>
-                    <div class="spotlight-card">
-                        <h3>More Info</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis</p>
-                    </div>
-                </div>
-            </section>
-        </div>
+        <section id="directory"></section>
     </main>
     <footer>
         <p>©️ Jason K Gibson 2024</p>
@@ -105,8 +58,8 @@
     </footer>
     <script src="scripts/get-dates.js"></script>
     <script src="scripts/hamburger.js"></script>
-    <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/windchill.js"></script>
+    <script src="scripts/members.js"></script>
+    <script src="scripts/singlefile.js"></script>
 </body>
 
 </html>
