--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shelley Idaho Chamber of Commerce</title>
+    <title>Directory of Members | Shelley Idaho Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico">
     <meta name="author" content="Jason K Gibson">
-    <meta name="description" content="The home page of the Chamber of Commerce for Shelley Idaho. including Events, Calendar, and directory of members">
+    <meta name="description" content="The Directory Page of the Chamber of Commerce for Shelley Idaho.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
