--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,9 +73,45 @@
             <section class="weather card-2">
                 <h2>Weather</h2>
                 <hr>
-                <p id="temp">72</p>
-                <p id="windspeed">Windspeed: 12</p>
-                <p id="windchill">Wind Chill: N/A</p>
+                <p>The Current Temperature in Shelley is <span id="weather"></span></span>
+                </p>
+                <div class="weather-stuff">
+
+                    <div id="forecast">
+                        <div id="forecast-title">
+                            <div>
+                                <h3>Shelley</h3>
+                                <h3>Forecast</h3>
+                            </div>
+                            <div>
+                                <img id="weather-icon" src="" alt="">
+                                <figcaption></figcaption>
+                            </div>
+                        </div>
+                        <br>
+                        <hr>
+                        <div id="forecast1">
+                        </div>
+                        <hr>
+                        <div id="forecast2">
+                        </div>
+                        <hr>
+                        <div id="forecast3">
+                        </div>
+                        <hr>
+                        <div id="forecast4">
+                        </div>
+                        <hr>
+                        <div id="forecast5">
+                        </div>
+                        <hr>
+                        <div id="forecast6">
+                        </div>
+                        <hr>
+                        <div id="forecast7">
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="spotlight card-1">
                 <h2>Spotlights</h2>
@@ -107,6 +143,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/dark-mode.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 
 </html>
