--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
         <section class="card right-col">
             <h3>Information</h3>
             <div>
-                <p>Weather Placeholder</p>
+                <img src="" alt="" id="weather-icon">
+                <p id="weather"></p>
                 <p class="page-visits">1</p>
+
             </div>
         </section>
     </main>
@@ -85,6 +87,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/page-visit.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 
 </html>
