--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,6 +44,11 @@
         </nav>
     </header>
     <main>
+        <div class="banner">
+            <button class="banner-close"> </button>
+            <div class="banner-title"></div>
+            <div class="banner-text"></div>
+        </div>
         <label class="switch">
                     <input type="checkbox">
                     <span class="slider round"></span>
@@ -144,6 +149,7 @@
     <script src="scripts/dark-mode.js"></script>
     <script src="scripts/windchill.js"></script>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/banner.js"></script>
 </body>
 
 </html>
