--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Congratulations!</title>
-    <meta name="description" content="A congratulations form for completing a form">
+    <title>Directory of Members | Shelley Idaho Chamber of Commerce</title>
+    <link rel="icon" href="favicon.ico">
+    <meta name="author" content="Jason K Gibson">
+    <meta name="description" content="The Directory Page of the Chamber of Commerce for Shelley Idaho.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+    <meta property="og:title" content="Jason K Gibson - WDD 230 - Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fchamber-of-commerce&psig=AOvVaw167CoqI2er2uHEsl1U0eso&ust=1728602339165000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLCSs9i3gokDFQAAAAAdAAAAABAE">
+    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230/chamber">
+    <meta property="og:description" content="Welcome to the Chamber of Commerce for Shelley Idaho">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/thankyou.css">
 </head>
 
 <body>
+    <header>
+        <div class="header-iden">
+            <div class="header-img">
+                <img src="images/world.webp" alt="Shelley Chamber of Commerce">
+            </div>
+            <div class="header-title">
+                <h1>Shelley Idaho Chamber of Commerce</h1>
+            </div>
+        </div>
+        <button id="hamburger"></button>
+        <nav>
+            <ul id="nav" class="closed">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="congrats">
         <h1>Thank You!</h1>
         <h2>Your application to join has been received!</h2>
     </div>
 </body>
+
+<footer>
+    <p>©️ Jason K Gibson 2024</p>
+    <p>A project of WDD230</p>
+    <p id="modifiedDate"></p>
+    <p>Contact: 123 Main St. Shelley Idaho | 208.123.4567</p>
+</footer>
 
 </html>
