--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,7 +78,7 @@
             <section class="weather card-2">
                 <h2>Weather</h2>
                 <hr>
-                <p>The Current Temperature in Shelley is <span id="weather"></span></span>
+                <p>The Current Temperature in Shelley is <span id="weather"></span>
                 </p>
                 <div class="weather-stuff">
 
@@ -90,7 +90,7 @@
                             </div>
                             <div>
                                 <img id="weather-icon" src="" alt="">
-                                <figcaption></figcaption>
+                                <p id="figcaption"></p>
                             </div>
                         </div>
                         <br>
