--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -8,7 +8,7 @@
     <title>Discover Shelley Idaho | Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico">
     <meta name="author" content="Jason K Gibson">
-    <meta name="description" content="The home page of the Chamber of Commerce for Shelley Idaho. including Events, Calendar, and directory of members">
+    <meta name="description" content="Discover Shelley Idaho and see what the Chamber of Commerce has to offer.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
