--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,12 +74,36 @@
             <section class="events card-2">
                 <h2>Events</h2>
                 <hr>
+                <div>
+                    <h3>Spud Days</h3>
+                    <p>Date: Sept 22-24, 2024</p>
+
+                    <p>Info: Shelley, Idaho's Spud Days is an annual celebration of the region's potato harvest. Highlights include a parade, spud-themed games, a free baked potato feast, and the famous Spud Tug. It's a fun family event celebrating the community's
+                        agricultural heritage. 🥔🎉</p>
+                </div>
+                <hr>
+                <div>
+                    <h3>Junior Miss</h3>
+                    <p>Date: Oct. 17, 2024</p>
+
+                    <p>The Shelley, Idaho Junior Miss competition celebrates the talents and achievements of young women in the community. Contestants showcase their skills in areas like talent performance, poise, and appearance. The event highlights their
+                        dedication to service projects and community involvement, culminating in the crowning of the new Junior Miss Shelley.</p>
+                </div>
+                <hr>
+                <div>
+                    <h3>Christmas Celebrations</h3>
+                    <p>Date: Dec. 20-24, 2024</p>
+
+                    <p>The Shelley, Idaho Christmas Celebration is a festive community event featuring a light parade, holiday music, and visits from Santa. Families gather to enjoy seasonal activities, local food vendors, and the joyous atmosphere, making
+                        it a cherished tradition in Shelley. 🎄🎅🏼
+                    </p>
+                </div>
             </section>
             <section class="weather card-2">
                 <h2>Weather</h2>
                 <hr>
-                <p>The Current Temperature in Shelley is <span id="weather"></span>
-                </p>
+
+
                 <div class="weather-stuff">
 
                     <div id="forecast">
@@ -93,7 +117,9 @@
                                 <p id="figcaption"></p>
                             </div>
                         </div>
-                        <br>
+                        <p>Current Temp: <span id="weather"></span></p>
+                        <p><span id="windspeed"></span></p>
+                        <p><span id="windchill"></span></p>
                         <hr>
                         <div id="forecast1">
                         </div>
@@ -118,22 +144,10 @@
                     </div>
                 </div>
             </section>
-            <section class="spotlight card-1">
+            <section class="card-1">
                 <h2>Spotlights</h2>
-                <div class="flexbox">
-                    <div class="spotlight-card">
-                        <h3>Weather</h3>
-                        <p>71 degrees - Partly Cloudy</p>
-                    </div>
-                    <div class="spotlight-card">
-                        <h3>Member Information</h3>
-                        <p>We have members</p>
-                        <button>Join</button>
-                    </div>
-                    <div class="spotlight-card">
-                        <h3>More Info</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatum omnis</p>
-                    </div>
+                <div class="flexbox" id="spotlight">
+                    <!-- To be filled by spotlight.js -->
                 </div>
             </section>
         </div>
@@ -150,6 +164,7 @@
     <script src="scripts/windchill.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
+    <script src="scripts/spotlight.js"></script>
 </body>
 
 </html>
