--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
             <ul id="nav" class="closed">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="directory.html">Directory</a></li>
+                <li><a href="directory.html" class="active-nav">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
             </ul>
         </nav>
