--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,7 +37,7 @@
         <nav>
             <ul id="nav" class="closed">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="discover.html">Discover</a></li>
+                <li><a href="discover.html" class="active-nav">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
             </ul>
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <img src="images/falls2.webp" alt="Idaho Falls" loading="lazy">
+                    <img src="images/fallstwo.webp" alt="Idaho Falls" loading="lazy">
                     <div class="overlay">
                         <p>Idaho Falls</p>
                     </div>
