--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
         <button id="hamburger"></button>
         <nav>
             <ul id="nav" class="closed">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active-nav">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
