--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,7 @@
                 <source media="(min-width: 1000px)" srcset="images/hero-medium.webp">
                 <img src="images/hero-large.webp" alt="temple picture" width="1500" height="750">
             </picture>
-            <button>Join the Chamber</button>
+            <a href="join.html">Join the Chamber</a>
             <div class="small-img">
                 <p>500px</p>
             </div>
